<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Develop">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_prblm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back_main" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="237dp"
        android:layout_height="403dp"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="227dp"
        android:contentDescription="@string/todo"
        android:rotation="15"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cow_rocket_hmpg" />

    <TextView
        android:id="@+id/DevelopTitle"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:text="Help Developing"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/frmDvlpTitle"
        android:layout_width="308dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:background="@drawable/emty_fld"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Yout Skill\Tool"
        android:textColor="#8E8E8E"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/frmDvlpDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DevelopTitle"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/butPhotoDvlp"
        android:layout_width="134dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/add_photo_but"
        android:text="@string/add_nphoto"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/frmDvlpDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frmDvlpTitle"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/butRecDvlp"
        android:layout_width="134dp"
        android:layout_height="72dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/add_rec_but"
        android:text="Record\nIdea"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/frmDvlpDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frmDvlpTitle"
        app:layout_constraintVertical_bias="2" />

    <EditText
        android:id="@+id/frmDvlpDes"
        android:layout_width="306dp"
        android:layout_height="284dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/des_frm_90"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/describe_problem"
        android:textColor="#8E8E8E"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907" />

</androidx.constraintlayout.widget.ConstraintLayout>